tests/datakinds/should_compile/DataKind1.hs
{-# LANGUAGE DataKinds #-}

module DataKind1 where

data type Foo = Bar
