tests/datakinds/should_fail/FailDataKind1.hs
module FailDataKind1 where

-- Fails because of no -XDataKinds
data type Foo = Bar
